fix: validation